# podcast-generator

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  example_usage.py  pyproject.toml
.cursor/rules/: 00-overview.mdc  10-langgraph-nodes.mdc  20-tts-providers.mdc  30-prompts.mdc  40-ui.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  cli.py  config_loader.py  language.py  observability.py  prompting.py  retry.py  settings.py
app/core/: __init__.py  text.py
app/graph/: __init__.py  state.py  workflow.py
app/graph/nodes/: __init__.py  audio.py  combine.py  outline.py  transcript.py
app/llm/: factory.py
app/models/: __init__.py  episode.py  schema.py  speaker.py  voice.py
app/resources/prompts/: transcript.jinja
app/services/: __init__.py  speaker_resolver.py
app/tts/: __init__.py  base.py  registry.py  voice_library.py
app/tts/providers/: elevenlabs.py  openai_tts.py  voxtral_cloud.py  voxtral_local.py  voxtral_mlx.py  xtts.py
app/ui/: _avatar_store.py  _bootstrap.py  streamlit_app.py
app/ui/pages/: 1_Generate.py  2_Voices.py  3_Speakers.py  4_Episodes.py  5_Library.py
deploy/langfuse/: README.md
docs/: architecture.md  ffmpeg.md  langfuse-local.md  llm-providers.md  observability.md  tts-providers.md  voice-cloning.md  voxtral-local-setup.md  workflow.md
prompts/: outline.jinja
scripts/: download_voxtral_model.py  run_voxtral_server.sh
tests/: test_config_loader.py  test_elevenlabs_voice_helpers.py  test_episode_merge.py  test_episode_profile_model.py  test_graph.py  test_llm_factory.py  test_speaker_resolver.py  test_transcript_llm_budget_config.py  test_transcript_speaker_normalize.py  test_transcript_word_budget.py  test_tts_registry.py  test_voice_library.py  test_voxtral_cloud.py
