[project]
name = "podcast-generator"
version = "0.1.0"
description = "AI podcast generation: LangGraph + LangChain + pluggable TTS (Voxtral, ElevenLabs, OpenAI, XTTS)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Albert Zagrajek"}]
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mistralai>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "loguru>=0.7.0",
    "streamlit>=1.40.0",
    "pydub>=0.25.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0",
    "pycountry>=24.6.0",
    "openai>=1.0.0",
    "elevenlabs>=1.0.0",
]

[project.optional-dependencies]
xtts = [
    "TTS>=0.22.0",
]
# Apple Silicon: Voxtral via github.com/lbj96347/Mistral-TTS-iOS (clone + VOXTRAL_MLX_ROOT)
mlx = [
    "mlx>=0.20.0",
    "mistral-common>=1.0.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
]

[project.scripts]
podcast-generator = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "huggingface_hub>=0.26.0",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
